syntax = "proto3";


package eventiumpb;

service Eventium {
    rpc PostEvent(Eventum) returns (PostEventResponse) {}
    rpc GetEventByID(GetEventByIDRequest) returns (Eventum) {}

//    rpc GetEventByNearbyLocation(Location) returns (GetEventByNearbyLocationResponse) {}
//    rpc GetEventsBySearchstring(string) returns (stream Eventum) {}
}

//=============================== MESSAGES
message GetEventByIDRequest {
    string id = 1;
}
//message GetEventByIDResponse {
//    bool success = 1;
//    Eventum event = 2;
//}


message PostEventResponse {
    bool success = 1;
    string eventID = 2;
}

//=============================== OBJECTS
message Location {
    float x = 1;
    float y = 2;
}

message Eventum {
    Location location = 16;
    int64 begin = 17;
    int64 end = 18;

    string headline = 19;
    bytes mediaData = 20;
    repeated string tags = 21;
}